This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix bases issues in PyType_FromModuleAndSpec()
Type: resource usage Stage: resolved
Components: C API Versions: Python 3.10, Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2020-11-19 17:31 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 23410 merged serhiy.storchaka, 2020-11-19 17:34
PR 23440 merged miss-islington, 2020-11-21 10:03
PR 23442 merged miss-islington, 2020-11-21 10:38
Messages (4)
msg381444 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2020-11-19 17:31
1. There are leaks if Py_tp_bases is used more than once and if some some calls before setting tp_bases are failed.

2. There is a crash if the bases argument or Py_tp_bases is not a tuple.

3. The documentation is not accurate.
msg381541 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2020-11-21 10:02
New changeset 1db76394ea79030aa4ed5349c950f6c6da51450f by Serhiy Storchaka in branch 'master':
bpo-42412: Fix possible leaks and check arguments in PyType_FromModuleAndSpec() (GH-23410)
https://github.com/python/cpython/commit/1db76394ea79030aa4ed5349c950f6c6da51450f
msg381543 - (view) Author: miss-islington (miss-islington) Date: 2020-11-21 10:39
New changeset 648a32b12ec676036ae4115747d458fb6f379d74 by Miss Islington (bot) in branch '3.8':
bpo-42412: Fix possible leaks and check arguments in PyType_FromModuleAndSpec() (GH-23410)
https://github.com/python/cpython/commit/648a32b12ec676036ae4115747d458fb6f379d74
msg381547 - (view) Author: miss-islington (miss-islington) Date: 2020-11-21 11:09
New changeset d153eb8a1e47123ecdb3fb47995a2c39ce7713ea by Miss Islington (bot) in branch '3.9':
bpo-42412: Fix possible leaks and check arguments in PyType_FromModuleAndSpec() (GH-23410)
https://github.com/python/cpython/commit/d153eb8a1e47123ecdb3fb47995a2c39ce7713ea
History
Date User Action Args
2022-04-11 14:59:38adminsetgithub: 86578
2020-11-21 11:27:31serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2020-11-21 11:09:43miss-islingtonsetmessages: + msg381547
2020-11-21 10:39:26miss-islingtonsetmessages: + msg381543
2020-11-21 10:38:38miss-islingtonsetpull_requests: + pull_request22334
2020-11-21 10:03:08miss-islingtonsetnosy: + miss-islington
pull_requests: + pull_request22332
2020-11-21 10:02:56serhiy.storchakasetmessages: + msg381541
2020-11-19 17:34:30serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request22303
2020-11-19 17:31:34serhiy.storchakacreate